<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_public_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_flag"

            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_skull"
            android:title="@string/menu_slideshow" />

    </group>
    <item android:title="COVID19 Updater">
        <menu >
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_who"
                    android:icon="@drawable/ic_android_black_24dp"
                    android:title="About COVID19 and App" />

            </group>


        </menu>
    </item>


</menu>