<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_margin="10dp"
        app:cardElevation="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#5E4DE9FA"
            >
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
              <TextView

                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
             android:text="@string/date"
                  android:padding="10dp"
                  android:textSize="15sp"
                  android:fontFamily="sans-serif-condensed-medium"
                  android:textColor="#000000"/>
              <TextView
                  android:id="@+id/date"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="20sp"
                  android:layout_gravity="center"
                  android:gravity="center"

                  android:fontFamily="sans-serif-condensed-medium"
                  android:textColor="#000000"

                  />


          </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:text="@string/totalcases"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#8B0000"/>
                <TextView
                    android:id="@+id/confirmed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"

                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:text="@string/totaldeaths"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"/>

                <TextView
                    android:id="@+id/deaths"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:gravity="center"

                    android:textColor="#FF0000"
                    android:textSize="20sp"

                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/totalrecovered"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/recovered"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#228B22"

                    />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   android:text="@string/active"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#000000"/>
                <TextView
                    android:id="@+id/active"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:gravity="center"

                    android:fontFamily="sans-serif-condensed-medium"
                    android:textColor="#8B0000"

                    />


            </LinearLayout>






        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>