<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
    android:background="#4DE9FA"
android:layout_height="match_parent"
tools:context=".ui.home.HomeFragment">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/main"
        app:cardElevation="10dp"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="#A8D5D6D6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
               android:paddingLeft="90dp"

                android:textSize="30sp"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#000000"
                android:text="@string/globalstatus"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/main"
        android:layout_margin="5dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="#4DE9FA"
            >
            <TextView
             android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#000000"
                android:text="@string/Htotalcases"

                />
            <View
                android:layout_marginTop="6dp"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/totalcases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#8B0000"


                />
            <TextView

                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#000000"
                android:text="@string/Htotaldeaths"

                />
            <View
                android:layout_marginTop="6dp"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/totalDeaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#FF0000"


                />
            <TextView

                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#000000"
                android:text="@string/Htotalrecovered"

                />
            <View
                android:layout_marginTop="6dp"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/totalrecover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#228B22"



                />


            <TextView

                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#000000"
                android:text="@string/Htodaycases"
                />
            <View
                android:layout_marginTop="6dp"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
            <TextView
                android:layout_marginTop="15dp"
                android:id="@+id/cases"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#8B0000"


                />
            <TextView

                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#000000"
                android:text="@string/Htodaydeaths"
                />
            <View
                android:layout_marginTop="6dp"
                android:layout_width="250dp"
                android:layout_gravity="center"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/deaths"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#FF0000"


                />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <com.leo.simplearcloader.SimpleArcLoader
        android:visibility="visible"
        android:id="@+id/loader"
        android:layout_centerInParent="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:arc_style="simple_arc">
    </com.leo.simplearcloader.SimpleArcLoader>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-4875345024018177/7874372319">
    </com.google.android.gms.ads.AdView>



</RelativeLayout>