<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D74DE9FA"
    tools:context=".DetailActivity">





    <androidx.cardview.widget.CardView
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
       >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/totalcases"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
            android:id="@+id/dcases"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="35sp"
            android:layout_gravity="center"
            android:gravity="center"

            android:fontFamily="sans-serif-condensed-medium"
            android:textColor="#8B0000"

            />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/secnd"
        android:layout_below="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/totaldeaths"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/ddeaths"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#FF0000"

                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@+id/secnd"
        android:id="@+id/third"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/todaycases"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/dtcase"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#8B0000"

                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@+id/third"
        android:id="@+id/fourth"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/todaydeaths"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/dtdeaths"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#FF0000"

                />
        </LinearLayout>



    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_below="@+id/fourth"
        android:id="@+id/five"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/totalrecovered"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/crecovered"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#228B22"

                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_below="@+id/five"
        android:id="@+id/six"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/todayrecovered"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/ctrecovered"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#228B22"

                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/six"
        android:id="@+id/seven"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/casesper"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/casespermillion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#8B0000"

                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/seven"
        app:cardElevation="5dp"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="#834DE9FA"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/deathsper"
                android:paddingLeft="5dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:textSize="25sp"
                android:textColor="#000000"
                />
            <TextView
                android:id="@+id/deathspermillion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:gravity="center"

                android:fontFamily="sans-serif-condensed-medium"
                android:textColor="#FF0000"

                />
        </LinearLayout>


    </androidx.cardview.widget.CardView>





</RelativeLayout>